--- a/CycleRoutes/CycleRoutes/wwwroot/index.html
+++ b/CycleRoutes/CycleRoutes/wwwroot/index.html
@@ -18,6 +18,7 @@
 
     <div id="app">Loading...</div>
 
+    <script src="_content/CycleRoutes.Shared/progress-bar-utils.js"></script>
     <script src="_framework/blazor.webview.js" autostart="false"></script>
 
 </body>
